==> esp8266/Arduino/hardware/arduino/sam/cores/sam/USBCore.cpp <==
#define USBCON
#include "Platform.h"
#include "USBAPI.h"
#include "USBDesc.h"
#include "USBCore.h"
#define NUM_IT_MAX 3
#define EP_SINGLE_64 0x32	// EP0
#define EP_DOUBLE_64 0x36	// Other endpoints
#define EP_TYPE_CONTROL				UDPHS_EPTCFG_EPT_SIZE_64 \
                                  | UDPHS_EPTCFG_EPT_TYPE_CTRL8 \
                                  | UDPHS_EPTCFG_BK_NUMBER_1
#define EP_TYPE_BULK_IN				UDPHS_EPTCFG_EPT_SIZE_512 \
                                  | UDPHS_EPTCFG_EPT_DIR \
                                  | UDPHS_EPTCFG_EPT_TYPE_BULK \
                                  | UDPHS_EPTCFG_BK_NUMBER_2
#define EP_TYPE_BULK_OUT			UDPHS_EPTCFG_EPT_SIZE_512 \
                                  | UDPHS_EPTCFG_EPT_TYPE_BULK \
                                  | UDPHS_EPTCFG_BK_NUMBER_2
#define EP_TYPE_INTERRUPT_IN		UDPHS_EPTCFG_EPT_SIZE_64 \
                                  | UDPHS_EPTCFG_EPT_DIR \
                                  | UDPHS_EPTCFG_EPT_TYPE_INT \
                                  | UDPHS_EPTCFG_BK_NUMBER_2
#define EP_TYPE_INTERRUPT_IN_HID	UDPHS_EPTCFG_EPT_SIZE_64 \
                                  | UDPHS_EPTCFG_EPT_DIR \
                                  | UDPHS_EPTCFG_EPT_TYPE_INT \
                                  | UDPHS_EPTCFG_BK_NUMBER_2

static inline void WaitIN(void)
{
//	while (!(UEINTX & (1<<TXINI)));
    while (!(UDPHS->UDPHS_EPT[0].UDPHS_EPTSTA & UDPHS_EPTSTA_TX_PK_RDY));
}

static inline void ClearIN(void)
{
//	UEINTX = ~(1<<TXINI);
   UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTCLRSTA = UDPHS_EPTCLRSTA_TX_COMPLT; 
}

static inline void WaitOUT(void)
{
//	while (!(UEINTX & (1<<RXOUTI)))
//		;
    // Waiting for Status stage
    while (UDPHS_EPTSTA_RX_BK_RDY != (UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTSTA & UDPHS_EPTSTA_RX_BK_RDY));
}

static inline u8 WaitForINOrOUT()
{
//	while (!(UEINTX & ((1<<TXINI)|(1<<RXOUTI))))
//		;
//	return (UEINTX & (1<<RXOUTI)) == 0;
    while (!(UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTSTA & (UDPHS_EPTSTA_RX_BK_RDY | UDPHS_EPTSTA_TX_PK_RDY)));
  	return (UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTSTA & UDPHS_EPTSTA_RX_BK_RDY) == 0;
}

static inline void ClearOUT(void)
{
//	UEINTX = ~(1<<RXOUTI);
    UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTCLRSTA = UDPHS_EPTCLRSTA_RX_BK_RDY;
}

static void Recv(volatile u8* data, u8 count)
{
    u8     *pFifo;

    pFifo = (u8*)((u32 *)UDPHS_EPTFIFO + (EPT_VIRTUAL_SIZE * NumEndpoint));

    while (count--)
		*data++ = pFifo[0]; // UEDATX;

	RXLED1;					// light the RX LED
	RxLEDPulse = TX_RX_LED_PULSE_MS;
}

static inline u8 ReceivedSetupInt()
{
//	return UEINTX & (1<<RXSTPI);
    return ( UDPHS_EPTSTA_RX_SETUP == (UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTSTA & UDPHS_EPTSTA_RX_SETUP) );
}

static inline void ClearSetupInt()
{
//	UEINTX = ~((1<<RXSTPI) | (1<<RXOUTI) | (1<<TXINI));
    UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTCLRSTA = UDPHS_EPTSTA_RX_SETUP | UDPHS_EPTCLRSTA_RX_BK_RDY | UDPHS_EPTCLRSTA_TX_COMPLT;
}

static inline void Stall()
{
//	UECONX = (1<<STALLRQ) | (1<<EPEN);
    UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTSETSTA = UDPHS_EPTSETSTA_FRCESTALL;
}

static inline u8 Stalled()
{
//	return UEINTX & (1<<STALLEDI);
    // Check if the data has been STALLed
    return ( UDPHS_EPTSTA_FRCESTALL == (UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTSTA & UDPHS_EPTSTA_FRCESTALL));
}

static inline u8 FifoFree()
{
//	return UEINTX & (1<<FIFOCON);
    return( 0 != (UDPHS->UDPHS_EPT[NumEndpoint].UDPHS_EPTSTA & UDPHS_EPTSTA_TX_PK_RDY ));
}

static
void InitEndpoints()
{
	for (u8 i = 1; i < sizeof(_initEndpoints); i++)
	{
        // Reset Endpoint Fifos
        UDPHS->UDPHS_EPT[i].UDPHS_EPTCLRSTA = UDPHS_EPTCLRSTA_TOGGLESQ | UDPHS_EPTCLRSTA_FRCESTALL;
        UDPHS->UDPHS_EPTRST = 1<<i;

		//UECONX = 1;
		//UECFG0X = pgm_read_byte(_initEndpoints+i);
        UDPHS->UDPHS_EPT[i].UDPHS_EPTCFG = _initEndpoints[i];

        while( (signed int)UDPHS_EPTCFG_EPT_MAPD != (signed int)((UDPHS->UDPHS_EPT[i].UDPHS_EPTCFG) & (unsigned int)UDPHS_EPTCFG_EPT_MAPD) )
        ;
        UDPHS->UDPHS_EPT[i].UDPHS_EPTCTLENB = UDPHS_EPTCTLENB_EPT_ENABL;

        //		UECFG1X = EP_DOUBLE_64;
	}
///\//	UERST = 0x7E;	// And reset them
///\//	UERST = 0;
}

static
bool SendDescriptor(Setup& setup)
{
	u8 t = setup.wValueH;
	if (USB_CONFIGURATION_DESCRIPTOR_TYPE == t)
		return SendConfiguration(setup.wLength);

	InitControl(setup.wLength);
#ifdef HID_ENABLED
	if (HID_REPORT_DESCRIPTOR_TYPE == t)
		return HID_GetDescriptor(t);
#endif

	u8 desc_length = 0;
	const u8* desc_addr = 0;
	if (USB_DEVICE_DESCRIPTOR_TYPE == t)
	{
		if (setup.wLength == 8)
			_cdcComposite = 1;
		desc_addr = _cdcComposite ?  (const u8*)&USB_DeviceDescriptorA : (const u8*)&USB_DeviceDescriptor;
	}
	else if (USB_STRING_DESCRIPTOR_TYPE == t)
	{
		if (setup.wValueL == 0)
			desc_addr = (const u8*)&STRING_LANGUAGE;
		else if (setup.wValueL == IPRODUCT)
			desc_addr = (const u8*)&STRING_IPRODUCT;
		else if (setup.wValueL == IMANUFACTURER)
			desc_addr = (const u8*)&STRING_IMANUFACTURER;
		else
			return false;
	}

	if (desc_addr == 0)
		return false;
	if (desc_length == 0)
		desc_length = *desc_addr;

	USB_SendControl(TRANSFER_PGM,desc_addr,desc_length);
	return true;
}
